--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -12,6 +12,7 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js" integrity="sha256-3Jy/GbSLrg0o9y5Z5n1uw0qxZECH7C6OQpVBgNFYa0g=" crossorigin="anonymous"></script>
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+    <link rel="shortcut icon" href="{{ '/assets/images/icons/favicon.ico?v=1' | relative_url }}">
     <style>
       body {
         background: {{ page.pg_bk_color }};
