feat: Update favicon & icon html

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,6 +13,7 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="shortcut icon" href="{{ '/assets/images/icons/favicon.ico?v=1' | relative_url }}">
+    <link rel="icon" href="{{ '/assets/images/icons/favicon.ico?v=1' | relative_url }}" type="image/x-icon">
     <style>
       body {
         background: {{ page.pg_bk_color }};
