--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -103,6 +103,13 @@ section ul ul, ul ol, ol ul, ol ol {
     margin-bottom: 4px;
     padding: 0 0 0 20px
 }
+section .center {
+    display: block;
+    text-align: center;
+}
+section .bold {
+    font-weight: bold;
+}
 
 h1, h2, h3, h2+p>strong {
     line-height: 1.0;
