r5d44: React/Redux Polling App Store Data

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -93,6 +93,36 @@ section > table {
     width: calc(100% - 10px);
     margin: 0 10px 20px;
 }
+
+blockquote { 
+    font-style: normal;
+    margin: 20px 10px;
+    padding: 0 20px;
+    border: 1px solid #ffcc00;
+    background-color: #f0f0f0;
+}
+blockquote > p, blockquote > h4, blockquote > h5, blockquote pre, blockquote > ul {
+    margin: 11px 0;
+    line-height: 1.2em;
+}
+blockquote > p, blockquote pre {
+    margin: 11px 10px;
+}
+
+li>blockquote, ul>blockquote {
+    margin: 20px 0;
+}
+// section > ol, section > ul { 
+//     margin: 0 40px 20px 30px;
+// }
+section > blockquote > ol, section > blockquote > ul {
+    padding: 0 0 0 20px;
+}
+section > blockquote > table {
+    margin: 0 10px 20px;
+    width: calc(100% - 20px);
+}
+
 hr { margin: 20px 0; }
 
 section>ol, section>ul { 
